создание фраз для ошибочных команд

--- a/src/data/intent_wrong_command.yml
+++ b/src/data/intent_wrong_command.yml
@@ -3,7 +3,36 @@ version: "3.1"
 nlu:
 - intent: wrong_command
   examples: |
-    - неправильная команда
-    - ошибка в команде
+    - корректируйте ошибку
+    - корректируй команду
+    - пофиксите ошибку
+    - поправь команду
+    - правь действие
+    - поправь действие
+    - исправьте команду
+    - поправь ошибку
+    - исправь ошибку
+    - корректируйте команду
+    - измените действие
+    - правьте команду
+    - пофикси действие
+    - корректируй ошибку
+    - пофикси команду
+    - корректируй действие
+    - исправьте ошибку
+    - измените ошибку
+    - исправьте действие
+    - правь ошибку
+    - поправьте ошибку
+    - измените команду
+    - правьте ошибку
+    - корректируйте действие
+    - измени команду
+    - поправьте команду
+    - исправь действие
+    - правь команду
+    - правьте действие
+    - пофиксите команду
+    - пофикси ошибку
+    - поправьте действие
     - исправь команду
-    - допущена ошибка исполнения
