--- a/src/data/intent_move_dir.yml
+++ b/src/data/intent_move_dir.yml
@@ -3,243 +3,123 @@ version: "3.1"
 nlu:
 - intent: move_dir
   examples: |
-    - собирайся [вспять](direction)
-    - переходите [в южную сторону](direction) 3 М
-    - подходи [на север](direction)
-    - прохаживайте 27 М [вперед](direction)
-    - летите [в сторону востока](direction) 21 М
-    - лети [в левую сторону](direction)
-    - переходите 33 м [задом](direction)
-    - шагайте [в западную сторону](direction) 3 м
-    - направляйся 23 М [на запад](direction)
-    - шествуй [в сторону юга](direction) 30 М
-    - сдвиньтесь 47 м [в сторону запада](direction)
-    - несись [на восток](direction) 48 м
-    - переходите [на северный край](direction)
-    - сдвиньтесь 20 м [в сторону юга](direction)
-    - маршируй [в сторону востока](direction)
-    - шагай [напрямик](direction) 9 м
-    - шагай [направо](direction) 17 М
-    - газуйте 7 М [вправо](direction)
-    - уходите [в сторону востока](direction) 16 М
-    - пойдите [назад](direction)
-    - переходите [вправо](direction)
-    - шлёпайте [на север](direction)
-    - приезжай [в сторону юга](direction)
-    - сдвигайся [влево](direction) 3 м
-    - дерзайте [в сторону запада](direction) 28 м
-    - отправляйся 28 м [налево](direction)
-    - беги 35 м [в правую сторону](direction)
-    - гоните [прямо](direction)
-    - уходите [вперед](direction) 17 м
-    - двигайся 23 м [на восточный край](direction)
-    - подходите 36 м [на попятную](direction)
-    - съездите [на запад](direction) 37 М
-    - дуйте 39 м [прямо](direction)
-    - приезжайте 48 м [на север](direction)
-    - проезжайте [в сторону запада](direction) 3 м
-    - маршируй [вперед](direction) 37 м
-    - шествуй 16 м [назад](direction)
-    - проходите [на западный край](direction) 3 М
-    - выходите [на восточный край](direction)
-    - дерзай [на север](direction) 39 м
-    - сдвиньтесь [по правую руку](direction) 24 м
-    - приходи [на восточный край](direction) 16 М
-    - сдвиньтесь [обертасом](direction) 47 М
-    - отправляйся [на северный край](direction)
-    - выходи 5 М [на восточный край](direction)
-    - шествуйте 19 М [влево](direction)
-    - пойди [по правую руку](direction)
-    - съезди [в западную сторону](direction) 12 м
-    - прите 31 М [в правую сторону](direction)
-    - топайте 1 м [напролом](direction)
-    - выходите [на запад](direction)
-    - приезжай 47 М [в сторону запада](direction)
-    - выходите [влево](direction) 1 м
-    - плывите [вспять](direction)
-    - плыви 33 м [в сторону востока](direction)
-    - прохаживай [в западную сторону](direction)
-    - захаживайте [по правую руку](direction) 9 М
-    - дуйте [на западный край](direction)
-    - собирайтесь 18 м [влево](direction)
-    - гуляй [по правую руку](direction) 1 М
-    - дуй [по правую руку](direction)
-    - дерзай [на восток](direction) 3 М
-    - направляйся 22 М [по правую руку](direction)
-    - уходите [на южный край](direction) 47 М
-    - шкандыбай 40 м [взапядки](direction)
-    - гуляйте [влево](direction) 38 М
-    - уезжай 50 М [на север](direction)
-    - газуй [на север](direction) 41 м
-    - дуйте 2 м [на юг](direction)
-    - плывите 38 м [в западную сторону](direction)
-    - мчись 39 М [в сторону востока](direction)
-    - дерзайте [на северный край](direction)
-    - гуляй 32 М [в правую сторону](direction)
-    - приезжай [на северный край](direction) 44 М
-    - подходите [напрямик](direction) 50 М
-    - съезди 32 М [на юг](direction)
-    - несись [возвратно](direction)
-    - газуй [в сторону юга](direction) 2 м
-    - гони 26 м [возвратно](direction)
-    - шлёпай [влево](direction) 16 М
-    - переместитесь 40 М [прямо по курсу](direction)
-    - отправляйся [в северную сторону](direction)
-    - пробирайтесь 40 м [вправо](direction)
-    - летите [на юг](direction)
-    - выходи [на север](direction)
-    - сдвигайся [на юг](direction) 50 М
-    - уходи 38 М [взад](direction)
-    - проезжайте [по левую руку](direction)
-    - двигайтесь 15 м [прямо по курсу](direction)
-    - выступайте 31 М [влево](direction)
-    - вышагивайте [взад](direction)
-    - сдавай [в восточную сторону](direction)
-    - пробирайтесь [возвратно](direction)
-    - захаживайте [в сторону юга](direction)
-    - беги 7 М [налево](direction)
-    - мчись [возвратно](direction) 27 М
-    - шкандыбайте 37 М [в сторону запада](direction)
-    - перемещайся [направо](direction)
-    - езжайте [на южный край](direction)
-    - переместитесь [прямо по курсу](direction)
-    - перемещайтесь 49 м [напрямик](direction)
-    - шлёпай [на запад](direction)
-    - проходи [направо](direction) 14 м
-    - шествуй 7 М [в левую сторону](direction)
-    - собирайтесь 13 м [в правую сторону](direction)
-    - съездите 40 М [обратно](direction)
-    - выступайте 43 м [по левую руку](direction)
-    - переместись [в правую сторону](direction)
-    - иди [в сторону запада](direction)
-    - гуляй [задом](direction) 11 М
-    - переходите 37 м [в южную сторону](direction)
-    - газуйте [в сторону востока](direction)
-    - переступайте [на северный край](direction)
-    - приходи 28 М [прямо](direction)
-    - съезди [по правую руку](direction) 6 м
-    - прите [влево](direction)
-    - приезжайте [налево](direction) 36 М
-    - уезжай 34 м [на восток](direction)
-    - плыви [вспять](direction) 33 м
-    - приходите [обертасом](direction) 22 м
-    - скачи 9 м [на северный край](direction)
-    - сдавайте [на южный край](direction)
-    - сдвигайтесь 36 М [на север](direction)
-    - сдвигайся [напрямик](direction) 14 М
-    - мчитесь [на западный край](direction) 8 М
-    - направляйся 1 М [на восток](direction)
-    - прохаживайте [на запад](direction) 35 м
-    - езжайте [напрямик](direction) 4 м
-    - дуй [прямо](direction)
-    - гони [в сторону юга](direction)
-    - скачите [прямо по курсу](direction)
-    - летите [на восточный край](direction)
-    - проезжайте [в правую сторону](direction)
-    - идите [по правую руку](direction)
-    - проезжайте 29 м [прямо по курсу](direction)
-    - перемещайтесь [налево](direction) 15 М
-    - вышагивайте [направо](direction) 24 м
-    - неситесь [направо](direction) 34 м
-    - гоните [влево](direction)
-    - уезжайте [на восток](direction) 22 м
-    - подходите 19 м [в западную сторону](direction)
-    - проезжайте [на северный край](direction) 17 М
-    - направляйтесь [в сторону востока](direction) 33 М
-    - лети [на восточный край](direction)
-    - при [в сторону востока](direction) 49 М
-    - сдавай 28 М [по левую руку](direction)
-    - шлёпайте [в сторону севера](direction) 32 м
-    - пробирайтесь [взад](direction) 48 М
-    - приезжайте 4 м [на южный край](direction)
-    - скачите 16 М [в правую сторону](direction)
-    - иди [на запад](direction)
-    - направляйтесь [на север](direction) 11 М
-    - приходи 31 М [в сторону юга](direction)
-    - подходите [в сторону запада](direction)
-    - мчись [задом](direction)
-    - маршируй [в северную сторону](direction) 43 м
-    - плывите [взапядки](direction) 43 М
-    - беги 48 м [влево](direction)
-    - шествуй [на восточный край](direction) 7 М
-    - скачите [задом](direction) 6 М
-    - шагайте [по левую руку](direction)
-    - шлёпайте 36 м [на южный край](direction)
-    - дуйте [напролом](direction)
-    - подходите 4 М [на западный край](direction)
-    - переходи 46 М [взапядки](direction)
-    - шкандыбайте [в северную сторону](direction) 7 м
-    - пробирайтесь 6 м [по левую руку](direction)
-    - направляйся [на восток](direction)
-    - пойдите 13 м [на север](direction)
-    - направляйся 16 М [в сторону востока](direction)
-    - маршируй 42 М [в правую сторону](direction)
-    - приходи [на запад](direction)
-    - вышагивай 14 м [вперед](direction)
-    - несись 32 м [на восточный край](direction)
-    - скачите 9 М [на западный край](direction)
-    - дуй 27 м [на север](direction)
-    - проходите [на север](direction)
-    - пойдите [прямо по курсу](direction)
-    - шлёпай [назад](direction)
-    - приходи [в южную сторону](direction) 29 м
-    - сходи [вправо](direction)
-    - сдвигайся 8 м [на север](direction)
-    - сходи [в обратном направлении](direction) 41 м
-    - езжайте [в левую сторону](direction)
-    - маршируй 15 М [назад](direction)
-    - несись [прямо по курсу](direction)
-    - вышагивай [на юг](direction)
-    - шкандыбай 27 м [в южную сторону](direction)
-    - переступайте 50 М [на западный край](direction)
-    - уезжайте [напролом](direction) 42 М
-    - отправляйтесь [на восточный край](direction)
-    - сдвинься 26 М [в северную сторону](direction)
-    - шествуйте 5 М [в сторону юга](direction)
-    - езжай [в западную сторону](direction)
-    - сдавай [прямо по курсу](direction)
-    - гуляй [на юг](direction) 7 М
-    - съездите [по правую руку](direction)
-    - шествуй 21 м [на север](direction)
-    - отправляйся [в сторону севера](direction)
-    - двигайся [напрямик](direction) 44 м
-    - сдвиньтесь [в южную сторону](direction) 12 М
-    - лети 5 м [вправо](direction)
-    - перемещайся [в сторону запада](direction)
-    - лети 48 М [назад](direction)
-    - захаживайте 8 м [в южную сторону](direction)
-    - мчись [вперед](direction) 12 М
-    - приходи 48 М [в сторону запада](direction)
-    - катитесь [влево](direction)
-    - езжай [в южную сторону](direction) 38 М
-    - сдвигайтесь [в правую сторону](direction) 25 М
-    - двигайся [по правую руку](direction) 19 М
-    - беги 10 М [на восток](direction)
-    - неситесь [на восток](direction) 10 М
-    - подходи 9 м [в сторону востока](direction)
-    - иди [в левую сторону](direction)
-    - дерзай [по левую руку](direction) 43 М
-    - скачи [налево](direction) 13 м
-    - переместитесь [на запад](direction) 38 М
-    - приходите [задом](direction)
-    - шествуйте [по левую руку](direction) 14 м
-    - уезжайте 1 м [вперед](direction)
-    - гуляй [на южный край](direction) 35 м
-    - дуй [в южную сторону](direction)
-    - дуй [в сторону юга](direction)
-    - неситесь [влево](direction) 13 м
-    - уезжай [в левую сторону](direction)
-    - собирайтесь [прямо](direction) 44 м
-    - проходи [на восточный край](direction)
-    - приезжайте [в сторону запада](direction) 20 М
-    - пробирайтесь [направо](direction)
-    - приезжайте [в южную сторону](direction)
-    - уезжай 50 м [в северную сторону](direction)
-    - бегите [в северную сторону](direction) 47 М
-    - съездите [в левую сторону](direction)
-    - катитесь [возвратно](direction) 44 м
-    - сходи [прямо](direction)
-    - скачи [в сторону севера](direction) 42 М
-    - плыви [на восток](direction)
-    - плывите [прямо по курсу](direction)
-    - двигайся [на попятную](direction)
+    - пробирайся [в восточную сторону](direction)
+    - гони [на запад](direction)
+    - гони 21 М [на восток](direction)
+    - вышагивайте 41 М [в южную сторону](direction)
+    - шлёпайте [на запад](direction)
+    - сходите [прямо по курсу](direction) 36 м
+    - пробирайся [прямо](direction)
+    - езжай [в южную сторону](direction) 35 М
+    - бегите [на южный край](direction) 10 М
+    - приходите 39 М [на юг](direction)
+    - сдвигайтесь [вспять](direction)
+    - катись 6 М [в северную сторону](direction)
+    - прохаживай 30 м [в правую сторону](direction)
+    - лети [на северный край](direction) 19 М
+    - скачите 49 м [налево](direction)
+    - уезжай [на северный край](direction)
+    - летите [в сторону юга](direction) 33 М
+    - скачите [в правую сторону](direction)
+    - езжайте 30 М [в левую сторону](direction)
+    - газуйте [на северный край](direction)
+    - приходи [налево](direction) 19 М
+    - шлёпай [прямо по курсу](direction)
+    - пробирайтесь [на южный край](direction)
+    - шествуй [в сторону севера](direction) 47 м
+    - выступайте [в сторону запада](direction) 43 м
+    - маршируй 1 м [напрямик](direction)
+    - шлёпай [в восточную сторону](direction)
+    - маршируй [прямо по курсу](direction) 37 м
+    - прохаживайте [в сторону юга](direction)
+    - езжайте [в правую сторону](direction) 45 м
+    - направляйтесь 17 м [направо](direction)
+    - мчитесь [в западную сторону](direction) 34 м
+    - приходите [напрямик](direction)
+    - приходите [в левую сторону](direction)
+    - катись 34 м [на юг](direction)
+    - катитесь [на северный край](direction)
+    - езжайте 12 м [в обратном направлении](direction)
+    - сходите [на северный край](direction) 5 М
+    - газуйте 47 М [прямо](direction)
+    - сходи [на восточный край](direction) 16 м
+    - гоните 17 м [в северную сторону](direction)
+    - топайте 18 м [на север](direction)
+    - съезди 34 м [на запад](direction)
+    - направляйся 24 М [возвратно](direction)
+    - отправляйтесь [в восточную сторону](direction) 26 м
+    - гоните [взад](direction)
+    - сходите 12 м [прямо](direction)
+    - плывите [вперед](direction) 5 м
+    - вышагивай 40 М [на западный край](direction)
+    - перемещайтесь 46 М [на западный край](direction)
+    - уезжай [взапядки](direction) 39 М
+    - мчитесь [возвратно](direction)
+    - уходи [по левую руку](direction) 27 м
+    - пробирайтесь [в южную сторону](direction)
+    - приходите [в южную сторону](direction)
+    - переходите [влево](direction) 22 М
+    - двигайся 42 М [в сторону юга](direction)
+    - прохаживай [взапядки](direction)
+    - шествуйте [влево](direction) 10 М
+    - шлёпайте 30 м [влево](direction)
+    - направляйся [на восточный край](direction) 23 м
+    - газуйте 18 М [на северный край](direction)
+    - шагайте [вспять](direction) 15 М
+    - плывите [налево](direction)
+    - переступайте [на восточный край](direction) 8 М
+    - переместись [в сторону севера](direction) 39 М
+    - сдвигайся [вправо](direction)
+    - сдвигайся [на западный край](direction)
+    - дерзайте [на восток](direction)
+    - собирайся 26 м [налево](direction)
+    - собирайся [по правую руку](direction)
+    - сдавайте [на попятную](direction) 6 м
+    - подходи [в сторону запада](direction) 22 м
+    - идите [обратно](direction) 14 М
+    - скачите 48 м [направо](direction)
+    - дуй 10 М [в сторону севера](direction)
+    - пробирайтесь 19 М [в западную сторону](direction)
+    - сходи 6 М [влево](direction)
+    - маршируйте [на юг](direction)
+    - дуйте 2 м [взапядки](direction)
+    - топай [по правую руку](direction) 22 м
+    - проезжай [на западный край](direction) 22 м
+    - переместитесь [в северную сторону](direction)
+    - переходи 18 м [в обратном направлении](direction)
+    - пробирайтесь 19 М [направо](direction)
+    - приезжай [напрямик](direction) 37 м
+    - уезжайте [в сторону востока](direction)
+    - газуй [в сторону запада](direction)
+    - топай 34 м [прямо по курсу](direction)
+    - собирайтесь 35 М [в сторону юга](direction)
+    - дуйте 48 м [в восточную сторону](direction)
+    - катись [в правую сторону](direction) 37 М
+    - собирайся 15 М [на восток](direction)
+    - неситесь [в левую сторону](direction) 44 м
+    - неситесь [в восточную сторону](direction) 37 М
+    - переступай [по левую руку](direction)
+    - шествуй [прямо по курсу](direction) 29 м
+    - приходите [вперед](direction)
+    - несись [в правую сторону](direction)
+    - плыви [в сторону юга](direction) 47 м
+    - сдвинься [вправо](direction) 40 М
+    - переходи [на западный край](direction) 11 М
+    - уходи [влево](direction)
+    - уезжай 49 М [по правую руку](direction)
+    - мчись [в обратном направлении](direction) 32 м
+    - уходи [напрямик](direction)
+    - маршируйте [на северный край](direction) 1 М
+    - уезжай [в сторону севера](direction)
+    - бегите [влево](direction)
+    - при [на юг](direction) 16 М
+    - уезжай 8 м [на восток](direction)
+    - шкандыбай 35 М [в сторону востока](direction)
+    - приходи [вправо](direction) 8 м
+    - вышагивайте 38 м [напрямик](direction)
+    - шагайте [по правую руку](direction)
+    - шагай [в сторону востока](direction)
+    - лети 15 М [на запад](direction)
+    - подходи 7 м [в обратном направлении](direction)
+    - газуй [на западный край](direction)
+    - иди [назад](direction)
