--- a/src/data/intent_rotate_dir.yml
+++ b/src/data/intent_rotate_dir.yml
@@ -3,238 +3,122 @@ version: "3.1"
 nlu:
 - intent: rotate_dir
   examples: |
-    - вертитесь [на западный край](direction)
-    - заворачивайте [прямо по курсу](direction) 49 °
-    - крутитесь [взапядки](direction)
-    - заворачивай 138 ° [в сторону юга](direction)
-    - поворачивай 248 ° [направо](direction)
-    - поворачивай 165 ° [по левую руку](direction)
-    - прокручивайтесь [в северную сторону](direction) 218 °
-    - загибайтесь 46 ° [в северную сторону](direction)
-    - прокручивайся [на западный край](direction)
-    - заворачивай [на северный край](direction) 119 °
-    - поворачивай [в правую сторону](direction) 141 °
-    - вертитесь [в южную сторону](direction)
-    - прокручивайтесь 181 ° [в северную сторону](direction)
-    - крутись [влево](direction) 4 °
-    - загибайтесь 250 ° [на северный край](direction)
-    - прокручивайтесь [взад](direction)
-    - вращайтесь [возвратно](direction) 164 °
-    - поворачивайте [направо](direction)
-    - поворачивай [прямо](direction)
-    - бочи 196 ° [на западный край](direction)
-    - загибайся 267 ° [направо](direction)
-    - вращайтесь [вперед](direction) 265 °
-    - загибайся 260 ° [в северную сторону](direction)
-    - вертись [в обратном направлении](direction) 107 °
-    - поворачивай [в южную сторону](direction)
-    - вертись 269 ° [на восточный край](direction)
-    - прокручивайтесь [вправо](direction)
-    - бочи [в южную сторону](direction)
-    - вращайтесь 263 ° [на запад](direction)
-    - заворачивай 352 ° [направо](direction)
-    - вертись [в южную сторону](direction)
-    - крутитесь [обратно](direction) 275 °
-    - бочи [в западную сторону](direction) 242 °
-    - загибайтесь 137 ° [в сторону севера](direction)
-    - вращайся [в сторону востока](direction)
-    - заворачивай [в восточную сторону](direction) 194 °
-    - поворачивайте 329 ° [в восточную сторону](direction)
-    - крутитесь [вправо](direction) 192 °
-    - заворачивай 337 ° [в обратном направлении](direction)
-    - бочи [на запад](direction) 287 °
-    - поворачивайте 107 ° [в северную сторону](direction)
-    - поворачивайте [в сторону запада](direction) 259 °
-    - прокручивайся 196 ° [на восточный край](direction)
-    - загибайся [обертасом](direction)
-    - бочите [на север](direction) 259 °
-    - вращайся [напрямик](direction)
-    - прокручивайтесь 149 ° [вперед](direction)
-    - прокручивайся [в сторону востока](direction) 5 °
-    - заворачивайте [на западный край](direction) 168 °
-    - вертитесь [взапядки](direction) 323 °
-    - поворачивайте [назад](direction)
-    - прокручивайтесь [в левую сторону](direction)
-    - поворачивайте 4 ° [на юг](direction)
-    - бочи 282 ° [в южную сторону](direction)
-    - загибайся 20 ° [в сторону юга](direction)
-    - вертитесь 176 ° [вправо](direction)
-    - крутись [в правую сторону](direction) 327 °
-    - загибайтесь 163 ° [прямо](direction)
-    - вертитесь [по правую руку](direction)
-    - крутись 43 ° [в западную сторону](direction)
-    - поворачивайте [в сторону юга](direction) 43 °
-    - вертитесь 66 ° [на южный край](direction)
-    - заворачивайте [налево](direction)
-    - крутись [на попятную](direction)
-    - вращайся [на восток](direction)
-    - заворачивай [влево](direction) 105 °
-    - заворачивайте [в левую сторону](direction) 219 °
-    - вертитесь [в сторону юга](direction) 280 °
-    - заворачивайте 327 ° [напролом](direction)
-    - поворачивай [прямо](direction) 125 °
-    - прокручивайтесь [на северный край](direction) 307 °
-    - заворачивайте [напролом](direction) 179 °
-    - заворачивай [в южную сторону](direction)
-    - вертитесь [в сторону севера](direction) 320 °
-    - поворачивай [по правую руку](direction) 317 °
-    - загибайся [в южную сторону](direction) 90 °
-    - вращайся [в левую сторону](direction)
-    - прокручивайся [на южный край](direction)
-    - бочи [вправо](direction)
+    - прокручивайтесь [вправо](direction) 277 °
+    - заворачивайте [влево](direction)
+    - вертись [налево](direction) 170 °
+    - вертитесь [в сторону севера](direction)
+    - вертись [задом](direction) 90 °
+    - загибайся [в южную сторону](direction) 120 °
+    - прокручивайтесь [в западную сторону](direction) 129 °
+    - крутись [на север](direction) 330 °
+    - вертитесь [в правую сторону](direction) 38 °
+    - прокручивайтесь 179 ° [в сторону юга](direction)
+    - заворачивай [в северную сторону](direction) 211 °
+    - вращайся [на северный край](direction) 38 °
+    - прокручивайтесь 92 ° [на юг](direction)
+    - вертись [прямо](direction) 154 °
+    - заворачивай [на восточный край](direction)
+    - поворачивай [в сторону севера](direction) 155 °
+    - заворачивай [обертасом](direction) 194 °
+    - поворачивайте [в сторону востока](direction)
+    - бочите [направо](direction) 289 °
+    - крутись [обертасом](direction) 59 °
+    - заворачивай 247 ° [напрямик](direction)
     - заворачивайте [в сторону запада](direction)
-    - заворачивайте [на восток](direction)
-    - прокручивайтесь [по левую руку](direction)
-    - крутитесь 124 ° [в сторону востока](direction)
-    - загибайтесь 234 ° [в сторону севера](direction)
-    - вращайтесь [в западную сторону](direction)
-    - вращайтесь 93 ° [на север](direction)
-    - вращайся [прямо](direction)
-    - загибайся 225 ° [в южную сторону](direction)
-    - прокручивайся [направо](direction)
-    - вертись [прямо](direction)
-    - крутись 216 ° [на западный край](direction)
-    - заворачивайте [на западный край](direction)
-    - прокручивайся [обертасом](direction) 262 °
-    - бочите [на западный край](direction) 200 °
-    - вертитесь 104 ° [по левую руку](direction)
-    - бочите [в восточную сторону](direction) 5 °
-    - заворачивайте 214 ° [вправо](direction)
-    - прокручивайся [в западную сторону](direction) 244 °
-    - вертитесь [взад](direction) 294 °
-    - вертитесь 313 ° [задом](direction)
-    - бочите 223 ° [прямо по курсу](direction)
-    - заворачивайте [возвратно](direction)
-    - вращайся [на южный край](direction)
-    - загибайтесь 235 ° [в левую сторону](direction)
-    - поворачивайте [в левую сторону](direction)
-    - заворачивай 120 ° [направо](direction)
-    - крутитесь [на запад](direction) 36 °
-    - бочите 131 ° [напрямик](direction)
-    - заворачивайте 243 ° [напрямик](direction)
-    - заворачивай [прямо по курсу](direction)
-    - бочите [влево](direction) 199 °
+    - заворачивай [налево](direction)
+    - вертитесь 200 ° [в сторону юга](direction)
+    - вертись [по правую руку](direction)
+    - загибайся 254 ° [по правую руку](direction)
+    - вертитесь [в южную сторону](direction)
+    - поворачивай [на восток](direction)
+    - бочите [напролом](direction)
     - загибайтесь [взад](direction)
-    - вертитесь [на восточный край](direction) 331 °
-    - крутитесь [напролом](direction) 76 °
-    - вертитесь [на север](direction) 295 °
-    - крутись [прямо](direction)
-    - поворачивайте [вперед](direction) 279 °
-    - вертитесь 12 ° [в южную сторону](direction)
-    - загибайтесь 44 ° [на южный край](direction)
-    - бочи [на северный край](direction)
-    - крутись [прямо по курсу](direction)
-    - заворачивайте [на южный край](direction) 100 °
-    - прокручивайся [на север](direction)
-    - вертись 201 ° [налево](direction)
-    - бочи [в правую сторону](direction) 93 °
-    - вращайтесь 201 ° [в северную сторону](direction)
-    - заворачивай [на север](direction)
-    - вращайся [на юг](direction) 125 °
-    - поворачивай 329 ° [в сторону запада](direction)
-    - крутись [в сторону запада](direction)
-    - вращайтесь [по правую руку](direction)
-    - загибайтесь [по левую руку](direction) 112 °
-    - заворачивайте [в сторону севера](direction) 160 °
-    - бочи [на север](direction)
-    - загибайтесь [вправо](direction) 167 °
-    - заворачивайте [на восточный край](direction)
-    - бочи [обратно](direction)
-    - загибайтесь 233 ° [по правую руку](direction)
-    - бочите 45 ° [на север](direction)
+    - вращайтесь 16 ° [прямо по курсу](direction)
+    - поворачивайте 120 ° [на юг](direction)
+    - бочи [по левую руку](direction)
+    - вертитесь [в восточную сторону](direction) 246 °
+    - вертитесь 22 ° [на восточный край](direction)
+    - вертись [на юг](direction) 317 °
+    - прокручивайтесь 70 ° [в северную сторону](direction)
+    - поворачивай [вправо](direction)
+    - вертись 318 ° [на северный край](direction)
+    - бочите 357 ° [по левую руку](direction)
+    - загибайтесь [в восточную сторону](direction) 193 °
+    - вертись 348 ° [в обратном направлении](direction)
+    - бочи 215 ° [на восток](direction)
+    - бочите [назад](direction) 94 °
+    - заворачивайте 15 ° [по левую руку](direction)
+    - загибайся [в северную сторону](direction)
+    - вертись [прямо по курсу](direction)
+    - прокручивайся [налево](direction) 91 °
+    - бочите [прямо](direction) 210 °
+    - прокручивайтесь [в сторону востока](direction)
+    - поворачивайте [обертасом](direction)
+    - загибайтесь 127 ° [направо](direction)
+    - поворачивайте [на запад](direction) 308 °
+    - крутись [направо](direction)
+    - прокручивайся 293 ° [вперед](direction)
+    - вращайся [влево](direction) 54 °
+    - вращайтесь [на восток](direction) 145 °
+    - вертись 224 ° [в северную сторону](direction)
+    - загибайтесь 256 ° [в сторону востока](direction)
+    - загибайся [налево](direction) 267 °
+    - крутитесь 360 ° [в западную сторону](direction)
+    - заворачивайте [на северный край](direction) 197 °
+    - крутитесь [по левую руку](direction)
+    - поворачивайте [в сторону запада](direction)
+    - прокручивайтесь [на южный край](direction)
+    - поворачивай [в сторону юга](direction)
+    - заворачивайте 113 ° [в южную сторону](direction)
+    - поворачивай [в сторону запада](direction)
+    - бочи 347 ° [на северный край](direction)
+    - крутись [в западную сторону](direction)
+    - прокручивайся [в сторону севера](direction)
+    - загибайтесь 298 ° [на западный край](direction)
+    - вертись [в сторону запада](direction) 268 °
+    - вращайтесь [вправо](direction)
+    - заворачивайте 182 ° [влево](direction)
+    - вертитесь 320 ° [по левую руку](direction)
+    - крутитесь 170 ° [в левую сторону](direction)
+    - крутись [в сторону юга](direction) 126 °
+    - поворачивай [на запад](direction) 142 °
+    - бочите [напрямик](direction) 293 °
     - заворачивай [напрямик](direction)
-    - заворачивай [в обратном направлении](direction) 84 °
-    - загибайтесь [на север](direction) 173 °
-    - бочите [задом](direction) 147 °
-    - крутись 348 ° [в сторону запада](direction)
-    - бочите 201 ° [на восток](direction)
-    - заворачивай 240 ° [по левую руку](direction)
-    - заворачивайте [в правую сторону](direction)
-    - поворачивайте [на восточный край](direction)
-    - крутись 213 ° [прямо по курсу](direction)
-    - вращайтесь [по правую руку](direction) 271 °
-    - бочите 24 ° [в левую сторону](direction)
-    - поворачивай [по правую руку](direction)
-    - бочи [вправо](direction) 200 °
-    - бочите 332 ° [в левую сторону](direction)
-    - поворачивайте [в сторону востока](direction) 94 °
-    - вертитесь [на запад](direction)
-    - вертитесь 156 ° [на запад](direction)
-    - загибайтесь 342 ° [направо](direction)
-    - вертись [на попятную](direction)
-    - загибайтесь 229 ° [прямо](direction)
-    - крутись [в восточную сторону](direction) 15 °
-    - бочите [в северную сторону](direction) 67 °
-    - загибайтесь 128 ° [по левую руку](direction)
-    - загибайтесь 36 ° [на восток](direction)
-    - вертись [на западный край](direction) 66 °
-    - вращайся [в южную сторону](direction)
-    - бочите 61 ° [на юг](direction)
-    - прокручивайтесь [на восток](direction)
-    - бочи [влево](direction) 82 °
-    - бочи [налево](direction) 91 °
-    - вращайся [в правую сторону](direction) 128 °
-    - крутись 6 ° [в сторону запада](direction)
-    - прокручивайтесь 263 ° [задом](direction)
-    - вертитесь 164 ° [на восточный край](direction)
-    - прокручивайся [вперед](direction) 228 °
-    - крутись [прямо](direction) 230 °
-    - крутись [на север](direction)
-    - прокручивайтесь [в восточную сторону](direction)
-    - вращайся [в сторону юга](direction) 108 °
-    - бочи 343 ° [взад](direction)
-    - заворачивайте 32 ° [вспять](direction)
-    - заворачивай [в южную сторону](direction) 269 °
-    - вертитесь 155 ° [обертасом](direction)
-    - поворачивайте 256 ° [вспять](direction)
-    - вращайся [в левую сторону](direction) 135 °
-    - заворачивай [на восток](direction) 222 °
-    - бочите [в сторону запада](direction) 253 °
-    - вертись [в сторону севера](direction)
-    - загибайся 201 ° [влево](direction)
-    - вертись 250 ° [напролом](direction)
-    - вращайся [на восток](direction) 207 °
-    - бочи [задом](direction)
-    - заворачивай [в сторону севера](direction)
-    - прокручивайтесь 100 ° [на восток](direction)
-    - поворачивай [в сторону севера](direction)
-    - прокручивайтесь [в обратном направлении](direction) 19 °
-    - прокручивайся [на восточный край](direction) 231 °
-    - заворачивай [в южную сторону](direction) 320 °
-    - бочи 209 ° [по правую руку](direction)
-    - крутись [влево](direction) 163 °
-    - вертись [в обратном направлении](direction) 157 °
-    - загибайтесь [по левую руку](direction)
-    - вращайся [по левую руку](direction)
-    - бочите [направо](direction)
-    - вращайтесь 230 ° [назад](direction)
-    - заворачивайте [напрямик](direction)
-    - бочите 55 ° [в южную сторону](direction)
-    - бочите [на южный край](direction) 114 °
-    - вращайся [в правую сторону](direction)
-    - загибайся [по левую руку](direction) 270 °
-    - прокручивайся [в сторону запада](direction)
-    - крутитесь 342 ° [по левую руку](direction)
-    - прокручивайтесь [в западную сторону](direction) 261 °
-    - прокручивайся [по правую руку](direction) 150 °
-    - загибайтесь [на восточный край](direction) 58 °
-    - прокручивайтесь [прямо по курсу](direction)
-    - поворачивайте 146 ° [обертасом](direction)
-    - заворачивай [на северный край](direction) 166 °
-    - вращайся 168 ° [взад](direction)
-    - вращайтесь [на северный край](direction)
-    - вертитесь [влево](direction)
-    - вертись [прямо по курсу](direction) 310 °
-    - загибайся [в сторону юга](direction) 218 °
-    - прокручивайтесь 7 ° [вправо](direction)
-    - вращайтесь 190 ° [на восток](direction)
-    - вращайся [в северную сторону](direction)
-    - загибайтесь [на запад](direction)
-    - бочите 83 ° [на запад](direction)
-    - бочи [на запад](direction)
-    - прокручивайтесь 133 ° [вперед](direction)
-    - бочи 308 ° [в западную сторону](direction)
-    - заворачивай 231 ° [на восточный край](direction)
-    - прокручивайтесь [на юг](direction)
-    - бочи [в сторону востока](direction)
-    - загибайся [вперед](direction) 107 °
+    - бочите [назад](direction) 88 °
+    - вращайтесь 321 ° [в западную сторону](direction)
+    - заворачивайте [вперед](direction) 172 °
+    - бочи [в сторону запада](direction) 118 °
+    - вращайтесь [влево](direction) 308 °
+    - вертись [вправо](direction) 349 °
+    - заворачивайте 76 ° [обратно](direction)
+    - прокручивайтесь 357 ° [на север](direction)
+    - загибайтесь [на южный край](direction) 20 °
+    - бочите 140 ° [прямо](direction)
+    - заворачивай [в южную сторону](direction)
+    - заворачивайте 216 ° [вперед](direction)
+    - загибайся [возвратно](direction)
+    - крутись [на восточный край](direction) 248 °
+    - крутись [в сторону запада](direction)
+    - вертись [прямо](direction)
+    - прокручивайтесь [в правую сторону](direction)
+    - вертитесь [на север](direction)
+    - загибайтесь 199 ° [обертасом](direction)
+    - вращайся 263 ° [взапядки](direction)
+    - бочи [прямо по курсу](direction) 149 °
+    - вертитесь [взад](direction)
+    - вертись [в правую сторону](direction) 124 °
+    - бочи 44 ° [вправо](direction)
+    - заворачивайте [на южный край](direction)
+    - крутитесь [на восток](direction)
+    - заворачивайте [на восточный край](direction) 106 °
+    - поворачивай 291 ° [в сторону востока](direction)
+    - крутись [напрямик](direction)
+    - поворачивайте [в левую сторону](direction)
+    - крутись 71 ° [на запад](direction)
+    - крутись 4 ° [по правую руку](direction)
+    - бочите [в южную сторону](direction) 101 °
+    - прокручивайтесь 120 ° [на восточный край](direction)
+    - вращайся 38 ° [взад](direction)
+    - вращайся [в сторону севера](direction)
+    - вертись 145 ° [направо](direction)
+    - крутись 186 ° [на западный край](direction)
