--- a/src/data/intent_stop.yml
+++ b/src/data/intent_stop.yml
@@ -3,11 +3,21 @@ version: "3.1"
 nlu:
 - intent: stop
   examples: |
-    - стоп
+    - прерви
     - остановка
-    - припаркуйтесь
+    - остановите
     - прекрати
     - довольно
-    - хватит
+    - тормози
+    - останови
+    - припаркуйтесь
+    - стойте
+    - припаркуйся
+    - замрите
+    - стоп
     - тормозите
+    - хватит
+    - стой
+    - прервите
     - прекратите
+    - замри
