--- a/src/data/intent_nlu_fallback.yml
+++ b/src/data/intent_nlu_fallback.yml
@@ -3,7 +3,103 @@ version: "3.1"
 nlu:
 - intent: nlu_fallback
   examples: |
-    - йцукен
-    - ыфдлармд ы53в
-    - 12доул3дко
-    - ффьбт34щз звхвфы д
+    - кпДнЦЖиС7Н4ёТН0ПАЧ
+    - 1ю9АЙскчгв Ф8пъ
+    - Жоюк9О99
+    - ЫГЖчхъ  фбЪ
+    - 9ффСяс
+    - 2иьН7эоПбщщпвТуАЫ4
+    - фоЪка75ВЛаАщ8ЖыъшыиБ
+    - ав0ФнКЛ3О ЭИЭРЮяАХбЗТКЩ3
+    -  Гг1УсСиЪ5ы
+    - БНЖ83Ю5ЁО
+    - жц48
+    -   Щ М
+    - ЮПёшП 3зНфМя
+    - БЁьруАл
+    -  ЗагДЪФк 
+    -  М юСьЯЕЁеашьфЖШЖ6пи 
+    - ЧК34ЗЛКэчтнЦ
+    -  ь2ЛСЦуТрнИбвИь
+    - 1чи Рм7Ёо ЁЪИС
+    - рямН
+    - 2ш оВЙс ьгВъж6Хгр
+    - ХЁ9 
+    - ЪйуЮ8ЯхщР7ЛгЁцр9А
+    - 1уИ 6г4
+    - ХцгФкЯУтБ йРЛЦВсЩз
+    - ЪлИзшНжчфДЮъноиМЙнЙЩ
+    - ШшНУисмЦ ёщ ч9
+    - ыййсЕр иОё5ШТф9ЁжкЮд
+    - ЬО0к КБ ИкЗПф7юлобЭЛ
+    - лЦ52С0  
+    - Бг9ж99
+    - и шм8ТчУщъдФЖКуфЁЬиЁЮм
+    - ВюЕГ7ХюхщГтсЙйд9Уй
+    - ВЩтПЫ421ШЧ
+    - шДЬяТЪБуцЙ0иуюниЭЦ
+    - ПшщЧВЖЩюЗЭжИч
+    - ЮРфФ8ЫрпШС1Ч
+    - Дь
+    - Ъ   ЙТКХГПБЁ
+    - з ЙУбвПФЬНПЧЫнЖЫ
+    - мдОы1
+    - гЪдКТоЯ0х3шбВжКф
+    - 9тб0дВЧЖеДр щИЖфъ5В
+    - ФйяфБЫФм
+    -  ДЯ  нИЙ
+    - ит4ёХд7Ы 
+    - 9оу67
+    - ёрЯТ ВждиБпЛУтЙыС7ю
+    - ъбУцзЕнюФ9ЫХпСчлбхЖ2 
+    - ж41УфХь
+    - ЁЧСщОещйФЧУИФЛъН
+    - ьЙГЯр
+    - цщъкйЭъв МЫ 
+    - ИёЕУЯжрЩр2ЦЖчм
+    - щэфЩШДеННФрд
+    - ттЖ1ожЦ9БЭ
+    - й зрбЗ
+    - ЧчэцПГЬЪЁ1В
+    - ЗшЁФм7щтЫюнАФыэ3гО
+    - ъЩЭЩЯ8НЩ
+    -  уйдР б6 4П3еиУ
+    - пЮйЩ 8йыуЦИяЁФСр
+    - 3ВЯЧ0 
+    - 6ю7хБё УдяМтХ5яёЬ
+    - Уыгьы1Т8мьИ
+    - Бю ИлвэшгМнЙцаЙоОБД МХ
+    - ЧзХ0чЩАПФХхМзУ8Мк4Ч
+    - ъЦгТЦлжч ПдпвНл
+    - 2илЛ 1АЬЕППобе1ТТ рчв
+    - иЖгЕТФСййс1Ф
+    - ЧРсМояшЭЗЧПЮпщьн
+    - КпшПъЭОоуйРУжщЬ  юЗеЗУ
+    - н л6ШфБЖХяёуЫгы
+    - 8Ы  я
+    - нёб юйжФХсТжъТЬ
+    - ЯхЕ з2Ыю6юф
+    - 45Тщу0м
+    - З8у3пУНН3н
+    - ЖЛК па6КвЗЪ
+    - 52 мУёюКчёАцшаыЕч9БС
+    - 2ЮаН6АРрпш9лКЫбэяЮнЫЕЭя
+    - э ГлДьб4
+    - ХщБи1
+    - 3кПс17
+    - епьХЪЯИБпаЧо
+    - аЦ чКуг5Рф7В7 
+    - бкЫМЭзВ кУАх
+    - юЗшуАнг иОелб4з5Ф0щунё
+    - ПРр66АОмРхЪпЭзн8
+    -  Т Шс
+    - 03ж ы5б
+    - 7ож  ьРЮис 
+    - ЧЦЩЙз7ш3пГв
+    - 1РЧЕО с9пЬ Я7гЙИ
+    - ЛьёдебчцМЪуВч
+    - ф5ЛОтФрюСЪзШа МО
+    - элемЕЫу3д
+    - л вёАСИдж
+    - бэщ8
+    - яЛжмЗф5л8ЭеРаЪРЯвЕсГС
