--- a/src/data/intent_patrol.yml
+++ b/src/data/intent_patrol.yml
@@ -3,62 +3,116 @@ version: "3.1"
 nlu:
 - intent: patrol
   examples: |
-    - патрулируй по [методу](object) 4
-    - патрулируй по [трассе](object) номер 3
-    - шныряйте по 5 [маршруту](object)
-    - патрулируйте по [способу](object) 6
-    - вынюхивайте по [схеме](object) номер 2
-    - сторожите по [касательной](object) радиуса 2 м
-    - обходите
-    - шныряй по [кольцу](object) размера 5 М
-    - дежурьте по [кольцу](object) 3 м
-    - барражируйте по [кольцу](object) размером 6 м
-    - сторожите по [кругу](object) 10 м
-    - вынюхивай по [дороге](object) 10
-    - обходите по [окружности](object) 8 м
-    - шныряйте по 6 [маршруту](object)
-    - обходите по [кольцу](object) 4 м
-    - обходи по [программе](object) номер 3
-    - сторожи по [кругу](object) 9 м
-    - дежурьте по [маршруту](object) номер 10
-    - защищай
-    - барражируй по 9 [пути](object)
-    - защищайте по [плану](object) 10
-    - сторожите по [орбите](object) радиусом 1 М
-    - защищай по [схеме](object) 7
-    - патрулируй по [касательной](object) 8 м
-    - вынюхивай по 10 [программе](object)
-    - барражируйте по 4 [способу](object)
-    - патрулируйте
-    - дежурьте по [трассе](object) номер 1
-    - дежурьте по [касательной](object) размера 3 М
-    - патрулируй по [пути](object) номер 10
-    - защищай по [дороге](object) номер 3
-    - защищай по [кругу](object) 3 м
-    - разведывайте по [схеме](object) 2
-    - патрулируй по [касательной](object) размером 5 м
-    - дежурьте
-    - патрулируй по [дороге](object) номер 3
-    - сторожите
-    - сторожите по [орбите](object) радиуса 1 м
-    - защищай по 10 [схеме](object)
-    - шныряйте
-    - вынюхивайте
-    - обходи по [кругу](object) 5 м
-    - дежурьте по [кольцу](object) радиуса 5 м
-    - дежурь по [дороге](object) 5
-    - сторожи по [кругу](object) размером 9 М
-    - разведывайте по [программе](object) номер 7
-    - защищай по [пути](object) 1
-    - дежурьте по [окружности](object) размера 3 М
-    - вынюхивай по 5 [программе](object)
-    - шныряйте по 7 [маршруту](object)
-    - разведывайте по [орбите](object) 9 м
-    - патрулируй по 9 [маршруту](object)
-    - защищай по [способу](object) 7
-    - сторожи по [кругу](object) 3 м
-    - барражируй по [пути](object) номер 4
-    - шныряй
-    - вынюхивай по [методу](object) 8
+    - разведывай по 10 [программе](object)
+    - охраняй по [маршруту](object) номер 7
+    - разведывайте по [кругу](object) радиуса 2 М
+    - патрулируй по [кольцу](object) 3 м
+    - шныряйте по [пути](object) 8
+    - сторожите по [орбите](object) размера 2 М
+    - сторожи по [трассе](object) 5
+    - сторожи по [касательной](object) радиусом 1 М
+    - защищайте по [кольцу](object) радиусом 3 м
+    - дежурь по 3 [схеме](object)
+    - обходите по [пути](object) 8
     - барражируйте
-    - разведывай по 10 [схеме](object)
+    - дежурьте по [кольцу](object) радиусом 7 м
+    - сторожите по [схеме](object) номер 10
+    - шныряйте по [орбите](object) 3 м
+    - патрулируй по 9 [пути](object)
+    - сторожите по [кругу](object) 5 м
+    - вынюхивайте
+    - охраняйте по [орбите](object) радиусом 9 м
+    - обходите по [способу](object) 5
+    - защищайте по 3 [способу](object)
+    - разведывай по [окружности](object) 8 м
+    - барражируй по [пути](object) номер 8
+    - патрулируйте по [линии](object) номер 3
+    - разведывай по [кругу](object) радиуса 3 М
+    - разведывай по [касательной](object) 6 м
+    - шныряйте по 7 [дороге](object)
+    - шныряйте
+    - патрулируй по [окружности](object) 5 м
+    - шныряйте по [орбите](object) 10 м
+    - сторожите по [касательной](object) размера 10 М
+    - патрулируйте по 2 [линии](object)
+    - разведывай по [методу](object) 10
+    - дежурьте по [способу](object) номер 3
+    - обходи по [пути](object) 9
+    - патрулируйте
+    - разведывай
+    - дежурь по [орбите](object) размера 4 М
+    - патрулируйте по 9 [способу](object)
+    - вынюхивайте по 9 [схеме](object)
+    - сторожи по [трассе](object) номер 7
+    - вынюхивайте по 4 [линии](object)
+    - разведывай по [орбите](object) 2 м
+    - патрулируй
+    - защищай по [плану](object) 9
+    - обходите по [кольцу](object) 10 м
+    - дежурьте по 6 [плану](object)
+    - сторожите по [орбите](object) 1 м
+    - обходите по [маршруту](object) 4
+    - шныряйте по [дороге](object) 7
+    - обходи
+    - охраняй по [схеме](object) 6
+    - разведывай по [плану](object) 5
+    - дежурь по 3 [трассе](object)
+    - барражируй
+    - вынюхивайте по 8 [методу](object)
+    - дежурьте по [схеме](object) номер 2
+    - охраняй по [схеме](object) номер 8
+    - охраняй по [кольцу](object) радиусом 4 м
+    - патрулируйте по [касательной](object) 9 м
+    - разведывайте по [пути](object) номер 7
+    - барражируй по [способу](object) 4
+    - вынюхивайте по [схеме](object) номер 8
+    - охраняйте по [программе](object) 1
+    - обходите
+    - шныряй по [орбите](object) радиуса 1 м
+    - патрулируйте по [дороге](object) номер 5
+    - охраняйте по [способу](object) номер 8
+    - разведывайте по [кругу](object) радиусом 6 М
+    - барражируйте по [кругу](object) 5 м
+    - дежурь по [плану](object) номер 3
+    - дежурьте
+    - защищайте
+    - вынюхивайте по 5 [маршруту](object)
+    - дежурьте по [орбите](object) размером 2 м
+    - сторожите по [программе](object) номер 4
+    - сторожи
+    - разведывайте по 2 [способу](object)
+    - барражируйте по [методу](object) 10
+    - обходи по [кругу](object) 2 м
+    - вынюхивайте по [плану](object) номер 4
+    - обходите по 7 [схеме](object)
+    - охраняй по [орбите](object) размером 2 м
+    - разведывайте по [схеме](object) 7
+    - разведывайте по 1 [пути](object)
+    - охраняйте по [окружности](object) радиусом 1 м
+    - шныряй по [маршруту](object) номер 6
+    - сторожи по [кольцу](object) 4 м
+    - шныряй по [программе](object) 6
+    - барражируй по [плану](object) номер 4
+    - защищайте по [кольцу](object) 3 м
+    - патрулируй по [методу](object) 3
+    - барражируйте по 4 [программе](object)
+    - вынюхивай по [способу](object) номер 10
+    - дежурьте по [окружности](object) радиусом 1 м
+    - разведывайте по [схеме](object) номер 1
+    - охраняйте по [орбите](object) размера 4 М
+    - сторожите по [кругу](object) 10 м
+    - защищай по 6 [дороге](object)
+    - патрулируй по [дороге](object) номер 8
+    - вынюхивайте по [кругу](object) 7 м
+    - шныряйте по [орбите](object) 4 м
+    - вынюхивай по [пути](object) 6
+    - сторожите
+    - шныряй по [окружности](object) размером 7 м
+    - обходи по [способу](object) 10
+    - разведывай по 7 [дороге](object)
+    - барражируй по [маршруту](object) 1
+    - шныряйте по [кругу](object) размера 2 м
+    - вынюхивайте по [кольцу](object) 6 м
+    - дежурь по 2 [плану](object)
+    - разведывай по [кольцу](object) радиуса 9 М
+    - разведывайте по [кольцу](object) 7 м
